<resources>
    <string name="app_name">KopaTest</string>
    <string name="btn_auth_text">Вхід</string>
    <string name="btn_verify">Верифікувати</string>
    <string name="btn_next">Далі</string>
    <string name="btn_continue">Далі</string>
    <string name="number_edit_text">номер</string>
    <string name="code_edit_text">код</string>
    <string name="fname">Ім\'я</string>
    <string name="sname">Прізвище</string>
    <string name="city_name">Місто</string>
    <string name="password_edit_text">пароль</string>
    <string name ="profile_hint_name">Angela Mayer</string>
    <string name="exit_profile_btn">Вийти</string>
    <string name="contact_number">Контактний номер</string>
    <string name="city">Місто</string>
    <string name="user_number">+38 063 282 90 70</string>
    <string name="user_city">Вінниця</string>
    <string name="facebook_app_id">1277174422681967</string>
    <string name="fb_login_protocol_scheme">fb1277174422681967</string>
    <string name="title">Nike</string>
    <string name="sizeBoots">Розмір стопи: </string>
    <string name="material">Матеріал:</string>
    <string name="materialTitle">leather</string>
    <string name="standarts">EU</string>
    <string name="width">Ширина / см</string>
    <string name="length">Довжина / см</string>
    <string name="price">100$</string>
    <string name="sizeOfFoot">Розміри стопи:</string>
    <string name="save">Зберегти</string>
    <string name="size">Розмір</string>
    <string name="addPhoto">Додати фото</string>
    <string name="model">Модель</string>
    <string name="description_post">Опис</string>
    <string name="price_post">Ціна</string>
    <string name="material_post">Матеріал</string>
    <string name="description">Опис про товар і як довго носив кросівки чи специфічні деталі взуття. натирало чи ні.
        чи дуло задувало. на широку ногу чи сайз не відповідає зязвленому. хвалиш взуття щоб точно купили.
        бо подарували дві пари, а ти за літо ще ні одної не зносив.</string>
    <string name="seller">Продавець</string>

    <string-array name="model_array">
        <item>Converse Classic</item>
        <item>New Balance</item>
        <item>Demix Sports</item>
    </string-array>

    <string-array name="size_array">
        <item>20.5</item>
        <item>21</item>
        <item>21.5</item>
        <item>22</item>
        <item>22.5</item>
        <item>23</item>
        <item>23.5</item>
    </string-array>

    <string-array name="length">
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>

    <string-array name="width_array">
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>

    <string-array name="material">
        <item>Leather</item>
        <item>Skin</item>
        <item>Jeans</item>
        <item>I dont know</item>
    </string-array>

    <string name="text_label_1">Active</string>
    <string name="text_label_2">Archived</string>

</resources>