<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--
    <data>
        <variable
            name="viewModel"
            type="com.example.kopashop.view.boots.BootsViewModel" />
    </data>
    -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:elevation="0dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_list">

            <ImageView
                android:id="@+id/image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:paddingLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp"
                tools:srcCompat="@drawable/ic_logo" />

            <CheckBox
                android:id="@+id/isChecked"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:button="@null"
                android:foreground="@drawable/checkbox_favourite_selector"
                app:layout_constraintLeft_toLeftOf="@id/image"
                app:layout_constraintTop_toTopOf="@id/image" />


            <TextView
                android:id="@+id/title"
                android:layout_width="64dp"
                android:layout_height="16dp"
                android:layout_marginStart="20dp"
                android:text="@string/title"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.142" />

            <TextView
                android:id="@+id/sizeBoots"
                android:layout_width="66dp"
                android:layout_height="14dp"
                android:layout_marginStart="20dp"
                android:text="@string/sizeBoots"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/bgPrice"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/materialBoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="6dp"
                android:text="@string/material"
                android:textColor="@color/list_text"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/materialTitle"
                app:layout_constraintStart_toEndOf="@+id/image" />

            <TextView
                android:id="@+id/materialTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="6dp"
                android:text="@string/materialTitle"
                android:textColor="@color/list_text"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materialBoot" />

            <TextView
                android:id="@+id/sizeBoot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginBottom="20dp"
                android:text="@string/standarts"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintRight_toLeftOf="@+id/lengthBoot2"/>

            <TextView
                android:id="@+id/widthBoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/width"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/lengthBoot2" />

            <TextView
                android:id="@+id/lengthBoot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/length"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/widthBoot"
                app:layout_constraintStart_toEndOf="@+id/sizeBoot2" />

            <TextView
                android:id="@+id/bootsLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:text="0"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/sizeBoot2"
                app:layout_constraintRight_toLeftOf="@id/length"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/sizeBoots"
                app:layout_constraintVertical_bias="0.655" />

            <TextView
                android:id="@+id/width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="8dp"
                android:text="0"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/widthBoot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/length"
                app:layout_constraintTop_toBottomOf="@id/bgPrice" />

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/lengthBoot2"
                app:layout_constraintLeft_toLeftOf="@id/bootsLength"
                app:layout_constraintRight_toLeftOf="@id/width"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.866" />

            <ImageView
                android:id="@+id/bgPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_rectangle"
                app:layout_constraintBottom_toTopOf="@+id/width"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.235" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/price"
                android:textColor="@color/list_price"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/bgPrice"
                app:layout_constraintLeft_toLeftOf="@id/bgPrice"
                app:layout_constraintRight_toRightOf="@id/bgPrice"
                app:layout_constraintTop_toTopOf="@id/bgPrice" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>